--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,160 +1,253 @@
-/* ==========================================================================
-   #STYLES
-   ========================================================================== */
+@font-face {
+  font-family: 'Avenir Book';
+  src: url("Avenir Book.eot");
+  src: url("../fonts/avenir/Avenir Book.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir/Avenir Book.woff2") format("woff2"), url("../fonts/avenir/Avenir Book.woff") format("woff"), url("../fonts/avenir/Avenir Book.svg#Avenir Book") format("svg");
+  font-weight: 400;
+  font-style: normal;
+  font-stretch: normal;
+  unicode-range: U+0020-02DC; }
+@font-face {
+  font-family: 'FontAwesome';
+  src: url("../fonts/fontawesome-webfont.eot?v=4.7.0");
+  src: url("../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("../fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("../fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("../fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
 
+.fa-search:before {
+  content: "\f002"; }
 
-/**
- *
- * [1]: Inheriting box sizing slightly better best-practice
- * https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
- *
- * [2]: WordPress System font-stack
- */
+.fa-chevron-left:before {
+  content: "\f053"; }
 
+.fa-chevron-right:before {
+  content: "\f054"; }
 
-/* RESET
-   ========================================================================== */
+.fa-chevron-down:before {
+  content: '\f078'; }
 
+.fa-facebook:before {
+  content: "\f09a"; }
+
+.fa-twitter:before {
+  content: "\f099"; }
+
+.fa-google-plus:before {
+  content: '\f0d5'; }
+
+.fa-linkedin:before {
+  content: '\f0e1'; }
+
+.fa-edit:before {
+  content: '\f044'; }
+
+.fa-times:before {
+  content: '\f00d'; }
+
+.fa-ellipsis-h:before {
+  content: '\f141'; }
+
+.fa-share-square-o:before {
+  content: '\f045'; }
+
+.fa-heart-o:before {
+  content: '\f08a'; }
+
+.fa-map-marker:before {
+  content: '\f041'; }
+
+.fa-clock-o:before {
+  content: '\f017'; }
+
+.fa-phone:before {
+  content: '\f095'; }
+
+.fa-line-chart:before {
+  content: '\f201'; }
+
+.fa-handshake-o:before {
+  content: '\f2b5'; }
+
+.fa-diamond:before {
+  content: '\f219'; }
+
+.fa-briefcase:before {
+  content: '\f0b1'; }
+
+.fa-mobile:before {
+  content: '\f10b'; }
+
+.fa-envelope-o:before {
+  content: '\f003'; }
+
+.fa-quote-left:before {
+  content: '\f10d'; }
+
+.fa-angle-left:before {
+  content: '\f104'; }
+
+.fa-angle-right:before {
+  content: '\f105'; }
+
+.fa-check:before {
+  content: '\f00c'; }
 
 html {
-  box-sizing: border-box;
-}
-
-*, *::before, *::after {
-  box-sizing: inherit; /* [1] */
-  margin: 0;
-  padding: 0;
-}
-
-
-
-/* FONTS
-   ========================================================================== */
+  font-size: 100%;
+  min-height: 100%;
+  position: relative; }
 
 body {
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif; /* [2] */
-}
-
-
-
-/* Header
-   ========================================================================== */
-
-.header {
+  margin: 0;
+  padding: 0;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 80px;
-  background-color: #525286;
-  color: #FFFFFF;
-  margin-bottom: 50px;
-}
-
-
-
-/* Homepage Container
-   ========================================================================== */
-
-/*.container {
-  width: 960px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
-}*/
-
-
-
-/* Profile Card
-   ========================================================================== */
-
-.person {
-  text-align: center;
-}
-
-.person > * {
-  margin-bottom: 5px;
-}
-
-.person-image {
-  width: 100%;
-  height: 300px;
-}
-
-
-
-/* Profile Page
-   ========================================================================== */
-
-.profile {
-  display: flex;
-  height: 100vh;
-  width: 100%;
-}
-
-.profile-image {
   height: 100%;
-  flex-grow: 1;
-  flex-basis: 50%;
-}
+  font-size: 14px;
+  font-size: 0.875rem;
+  font-family: "Montserrat", sans-serif;
+  line-height: 24px;
+  color: #333333;
+  min-width: 320px; }
 
-.profile-details {
-  flex-basis: 30%;
-  flex-grow: 1;
-  padding: 50px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
 
-.profile-details > * {
-  margin-bottom: 20px;
-}
+ul li {
+  margin: 0;
+  padding: 0; }
 
+ol {
+  margin: 0;
+  padding: 0; }
 
+p {
+  padding: 0;
+  margin: 0px 0px 5px 0px;
+  margin: 0rem 0rem 0.3125rem 0rem; }
 
-/* Buttons
-   ========================================================================== */
+h1, h2, h3, h4, h5, h6 {
+  padding: 0;
+  margin: 0px 0px 10px 0px;
+  margin: 0rem 0rem 0.625rem 0rem;
+  font-weight: normal; }
 
-.button {
-  height: 50px;
-  line-height: 50px;
-  width: 100%;
+fieldset {
+  border: none;
+  margin: 0;
+  padding: 0; }
+
+button {
+  cursor: pointer; }
+
+a {
+  color: #00657f;
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -ms-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  transition: all .3s ease; }
+  a:hover, a:focus {
+    text-decoration: none;
+    color: #00657f; }
+
+/* =WordPress Core
+-------------------------------------------------------------- */
+.alignnone {
+  margin: 5px 20px 20px 0; }
+
+.aligncenter,
+div.aligncenter {
+  display: block;
+  margin: 5px auto 5px auto; }
+
+.alignright {
+  float: right;
+  margin: 5px 0 20px 20px; }
+
+.alignleft {
+  float: left;
+  margin: 5px 20px 20px 0; }
+
+a img.alignright {
+  float: right;
+  margin: 5px 0 20px 20px; }
+
+a img.alignnone {
+  margin: 5px 20px 20px 0; }
+
+a img.alignleft {
+  float: left;
+  margin: 5px 20px 20px 0; }
+
+a img.aligncenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
+.wp-caption {
+  background: #fff;
+  border: 1px solid #f0f0f0;
+  max-width: 96%;
+  padding: 5px 3px 10px;
+  text-align: center; }
+
+.wp-caption.alignnone {
+  margin: 5px 20px 20px 0; }
+
+.wp-caption.alignleft {
+  margin: 5px 20px 20px 0; }
+
+.wp-caption.alignright {
+  margin: 5px 0 20px 20px; }
+
+.wp-caption img {
+  border: 0 none;
+  height: auto;
+  margin: 0;
+  max-width: 98.5%;
+  padding: 0;
+  width: auto; }
+
+.wp-caption p.wp-caption-text {
+  font-size: 11px;
+  line-height: 17px;
+  margin: 0;
+  padding: 0 4px 5px; }
+
+/* Text meant only for screen readers. */
+.screen-reader-text {
+  clip: rect(1px, 1px, 1px, 1px);
+  position: absolute !important;
+  white-space: nowrap;
+  height: 1px;
+  width: 1px;
+  overflow: hidden; }
+
+.screen-reader-text:focus {
+  background-color: #f1f1f1;
+  border-radius: 3px;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+  clip: auto !important;
+  color: #21759b;
+  display: block;
+  font-size: 14px;
+  font-size: 0.875rem;
+  font-weight: bold;
+  height: auto;
+  left: 5px;
+  line-height: normal;
+  padding: 15px 23px 14px;
   text-decoration: none;
-  text-align: center;
-  font-size: 20px
-}
+  top: 5px;
+  width: auto;
+  z-index: 100000; }
 
-.button-twitter {
-  color: #FFFFFF;
-  background-color: #659AF1;
-  border-radius: 5px;
-}
-
-/* Table css
-   =========================================================================== */
-
-table {
-  border-collapse: collapse;
-  width: 800px;
-}
-
-table, th, td {
-  border: 1px solid black;
-}
-
-th {
-  height: 50px;
-}
-
-td {
-  height: 30px;
-  padding-left: 10px;
-}
-
-table.airtable_data {
-    margin-top: 100px;
-    margin-right: auto;
-    margin-left: auto;
-}
+/*# sourceMappingURL=style.css.map */
