--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width= device-width, initial-scale= 1.0">
-  <title></title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="/css/nouislider.min.css">
-  <link rel="stylesheet" type="text/css" href="/dist/css/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width= device-width, initial-scale= 1.0">
+    <title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/css/nouislider.min.css">
+    <link rel="stylesheet" type="text/css" href="/dist/css/style.css">
 </head>
 <body>
-  <div class="wrapper">
-    <!-- Header -->
-    <header> 
+    <div class="wrapper">
+        <!-- Header -->
+        <header> 
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
@@ -31,20 +31,26 @@
                                                     <input type="text" placeholder="Search...">
                                                 </div>
                                             </div>
-                                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                                        <button class="navbar-toggler" type="button">
                                             <span class="navbar-toggler-icon"></span>
                                         </button>
                                     </div>
-                                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                                    <div id="collapsibleNavbar">
+                                            <div class="nav-header">
+                                                Menu
+                                                <button class="close-nav">
+                                                        <span aria-hidden="true">&times;</span>
+                                                      </button>
+                                            </div>
                                       <ul class="navbar-nav">
                                         <li class="nav-item">
-                                          <a class="nav-link" href="#">1</a>
+                                          <a class="nav-link" href="#">Content Type</a>
                                         </li>
                                         <li class="nav-item">
-                                          <a class="nav-link" href="#">2</a>
+                                          <a class="nav-link" href="#">Focus Area</a>
                                         </li>
                                         <li class="nav-item">
-                                          <a class="nav-link" href="#">3</a>
+                                          <a class="nav-link" href="#">Impact</a>
                                         </li> 
                                       </ul>
                                     </div> 
@@ -52,7 +58,7 @@
                     </div>
                 </div>
             </div>
-    </header>
+        </header>
 
         <!-- Content -->
         <main>
@@ -120,9 +126,9 @@
                                 <ul>
                                     <li><label class="check-box"><input type="checkbox"><span class="checkmark"></span>  New York</label></li>
                                     <li><label class="check-box"><input type="checkbox"><span class="checkmark"></span>  London</label></li>
-                                    <li><label class="check-box"><input type="checkbox"checked> <span class="checkmark"></span>  Toronto</label></li>
+                                    <li><label class="check-box"><input type="checkbox"> <span class="checkmark"></span>  Toronto</label></li>
                                     <li><label class="check-box"><input type="checkbox"><span class="checkmark"></span>  Vancouver</label></li>
-                                    <li><label class="check-box"><input type="checkbox"checked> <span class="checkmark"></span> Tokyo</label></li>
+                                    <li><label class="check-box"><input type="checkbox"> <span class="checkmark"></span> Tokyo</label></li>
                                     <li><label class="check-box"><input type="checkbox"><span class="checkmark"></span>  Vienna</label></li>
                                     <li><label class="check-box"><input type="checkbox"><span class="checkmark"></span>  Stockholm</label></li>
                                 </ul>
@@ -145,7 +151,7 @@
                             <div class="filter__area filter__fade">
                                 <ul>
                                     <li><label class="check-box"><input type="checkbox"><span class="checkmark"></span> Lifestyle </label></li>
-                                    <li><label class="check-box"><input type="checkbox" checked> <span class="checkmark"></span> Financial </label></li>
+                                    <li><label class="check-box"><input type="checkbox"> <span class="checkmark"></span> Financial </label></li>
                                     <li><label class="check-box"><input type="checkbox"><span class="checkmark"></span>  Workforce </label></li>
                                     <li><label class="check-box"><input type="checkbox"><span class="checkmark"></span>  Government </label></li>
                                     <li><label class="check-box"><input type="checkbox"><span class="checkmark"></span>  Transportation </label></li>
@@ -308,12 +314,20 @@
                 <section class="section__products">
                     <div class="container">
                         <div class="row">
-                            <% for(var i=0; i<title.length; i++) {%>
+                            <% for(var i=0; i<title.length; i++) { %>
+
+                                <!-- <%= i %>
+                                <% image[1].forEach((image) => { %>
+                                <li><%= image.url %></li>
+                                <% }) %> -->
+                                
                                 <div class="col-sm-12 col-md-6 col-lg-3">
                                     <div class="item__box">
-                                        <div class="item__img" style="background-image: url('<%= image[i]%>')">
-        
-                                        </div>
+                                        
+                                        <% image[1].forEach((image) => { %>
+                                        <div class="item__img" style="background-image: url('<%= image.url %>')"></div>
+                                        <% }) %>
+
                                         <div class="item__desc">
                                             <div class="item__case">
                                                 <p><span class="icon icon-case"></span><%= type[i]%></p>
@@ -330,15 +344,15 @@
                 </section>
             </section>
         </main>
-    
-    <!-- Footer -->
-    <footer>
-      <div class="container">
+        
+        <!-- Footer -->
+        <footer>
+            <div class="container">
                 <div class="row">
                         <div class="col-sm-12 col-md-6">
                             <ul>
-                                <li><a href="#">Terms of Use</a></li>
-                                <li><a href="#">Documentation & Support</a></li>
+                                <li><a href="#"> Terms of Use </a></li>
+                                <li><a href="#">  Documentation & Support</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-12 col-md-6">
@@ -348,12 +362,12 @@
                         </div>
                 </div>
             </div>
-    </footer>
-  </div>
-  <script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="/js/nouislider.min.js"></script>
-  <script type="text/javascript" src="/js/app.js"></script>
+        </footer>
+    </div>
+    <script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/js/nouislider.min.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
 </body>
 </html>
