--- a/views/index.ejs
+++ b/views/index.ejs
@@ -114,7 +114,7 @@
                             </div>
                         </div>
                         <div class="col-sm-3">
-                            <h2>CONTENT TYPE</h2>
+                            <h2>CITY</h2>
                             <!-- <div class="filter__info filter__fade">
                                 <p>Lorem ipsum is simply text of the type industry. Lorem ipsum is simply text of the type industry.</p>
                             </div> -->
